Changed name "YouTube-CLI" to "SupTube"

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "adguard": "^0.0.0",
+    "@tauri-apps/api": "^1.2.0",
+    "@tauri-apps/cli": "^1.2.3",
     "tauri": "^0.14.1"
   }
 }
