--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "youtube-cli"
-version = "1.1.0"
+name = "suptube"
+version = "1.2.0"
 description = "An unofficial client for YouTube"
 authors = ["you"]
 license = ""
@@ -11,12 +11,13 @@ rust-version = "1.57"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.2", features = [] }
+tauri-build = { version = "1.2.1", features = [] }
 
 [dependencies]
 serde_json = "1.0"
+tauri-bundler = "1.1.2"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.2", features = ["shell-open"] }
+tauri = { version = "1.2.4", features = ["shell-open"] }
 
 [features]
 # by default Tauri runs in production mode
