--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.2.1", features = [] }
 serde_json = "1.0"
 tauri-bundler = "1.1.2"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.2.4", features = ["shell-open"] }
+tauri = { version = "1.2.4", features = ["shell-open", "window-set-fullscreen", "window-set-resizable"] }
 
 [features]
 # by default Tauri runs in production mode
