--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,6 +19,11 @@ tauri-bundler = "1.1.2"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.2.4", features = ["shell-open", "window-set-fullscreen", "window-set-resizable"] }
 
+[dependencies.fix-path-env]
+git = "https://github.com/tauri-apps/fix-path-env-rs"
+#tag = "fix-path-env-v0.1.0"
+branch = "dev"
+
 [features]
 # by default Tauri runs in production mode
 # when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
