--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "suptube"
-version = "1.2.1"
+version = "1.2.2"
 description = "An unofficial client for YouTube"
 authors = ["you"]
 license = ""
@@ -17,7 +17,7 @@ tauri-build = { version = "1.2.1", features = [] }
 serde_json = "1.0"
 tauri-bundler = "1.1.2"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.2.4", features = ["shell-open", "window-set-fullscreen", "window-set-resizable"] }
+tauri = { version = "1.2.4", features = ["shell-open", "updater", "window-set-fullscreen", "window-set-resizable"] }
 
 [features]
 # by default Tauri runs in production mode
