--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "suptube"
-version = "1.3.0"
+version = "1.4.0"
 description = "An unofficial client for YouTube"
-authors = ["you"]
-license = ""
-repository = ""
+authors = ["Sandun Wiratunga"]
+license = "MIT"
+repository = "https://github.com/sandunwira/SupTube"
 edition = "2021"
-rust-version = "1.57"
+publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -17,7 +17,8 @@ tauri-build = { version = "1.2.1", features = [] }
 serde_json = "1.0"
 tauri-bundler = "1.1.2"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.2.4", features = ["shell-open", "window-set-fullscreen", "window-set-resizable"] }
+tauri = { version = "1.2.4", features = ["shell-open", "updater", "window-set-fullscreen", "window-set-resizable"] }
+tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
 
 [features]
 # by default Tauri runs in production mode
